force-app/main/default/objects/Adjustment__c/Adjustment__c.object-meta.xml
<CustomObject>
    <label>Adjustment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>