force-app/main/default/objects/Adjustment__c/fields/Is_APPC__c.field-meta.xml
<CustomField>
    <fullName>Is_APPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is APPC</label>
    <type>Checkbox</type>
</CustomField>