force-app/main/default/objects/Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ERP__c</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Case__c</columns>
    <columns>Adjustment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>